--- a/public/css/global.css
+++ b/public/css/global.css
@@ -16,6 +16,21 @@ body {
     --btn-green: #28a745;
     --btn-red: #dc3545;
     --btn-dark: #343a40;
+    --btn-transparent: rgba(0,0,0,0);
+}
+
+.btn-transparent {
+    box-sizing: border-box;
+    text-align: center;
+    border: none;
+    background-color: var(--btn-transparent);
+    border-radius: 5px;
+    padding: 0px 15px;
+    height: 38px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    color:var(--btn-dark);
+    text-decoration: none;
 }
 
 .btn-normal {
@@ -49,8 +64,7 @@ input[type="text"] {
     font-family: var(--title-font);
     font-size: 40px;;
     font-weight: var(--title-font-weight);
-    align-self: flex-start;
-    margin: 10px 15px;
+    justify-self: flex-start;
 }
 
 .page-title:hover {
@@ -66,6 +80,8 @@ input[type="text"] {
     width: 100vw;
     height: 100vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 
@@ -83,4 +99,13 @@ input[type="text"] {
     color: rgb(150, 150, 150);
     font-size: 13px;
     font-weight: 200;
+}
+
+.search-box {
+    font-size: 15px;
+    width: min-content;
+    flex: 1;
+    height: 35px;
+    padding: 0 5px;
+    border-radius: 5px;
 }
