--- a/views/articleRead.ejs
+++ b/views/articleRead.ejs
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="main-container">
+    <%- include('./_navbar', { auth: false }) %>
     <main>
         <h1 class="page-title" onclick="location.href = '/'">Block</h1>
         <h1><%= article.title %></h1>
